--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
     <fieldset>
         <fieldset>
                 <legend>Контактные данные</legend>
-                <label>ФИО</label> <input type="text" name="required" placeholder="ФИО"><br>
-                <label>E-mail</label> <input type="email" name="required" placeholder="E-mail"><br>
-                <label>Пароль</label> <input type="password" name="required" placeholder="пароль"><br>
-                <label>Адрес сайта</label> <input type="text" name="required" placeholder="http://"><br>
+                <label>ФИО</label> <input type="text" required placeholder="ФИО"><br>
+                <label>E-mail</label> <input type="email" required placeholder="E-mail"><br>
+                <label>Пароль</label> <input type="password" required placeholder="пароль"><br>
+                <label>Адрес сайта</label> <input type="text"  placeholder="http://"><br>
             </fieldset>
             <fieldset>
                 <legend>Дополнительные данные</legend>
