--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
     <fieldset>
         <fieldset>
             <legend>Контактные данные</legend>
-            <label>ФИО <input type="text" required placeholder="ФИО"></label><br>
-            <label>E-mail <input type="email" required placeholder="E-mail"></label><br>
-            <label>Пароль <input type="password" required placeholder="пароль"></label><br>
-            <label>Адрес сайта <input type="text"  placeholder="http://"></label><br>
+            <label>ФИО <input type="text" name="fio" required placeholder="ФИО"></label><br>
+            <label>E-mail <input type="email" name="email" required placeholder="E-mail"></label><br>
+            <label>Пароль <input type="password" name="password" required placeholder="пароль"></label><br>
+            <label>Адрес сайта <input type="text" name="adress"  placeholder="http://"></label><br>
         </fieldset>
         <fieldset>
             <legend>Дополнительные данные</legend>
