--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
         <fieldset>
             <legend>Предпочтения в литературе</legend>
             <div>
-                <input type="checkbox" name="likebook[]" value="Классика">Классическая литература<br>
-                <input type="checkbox" name="likebook[]" value="детективы">Детективы<br>
-                <input type="checkbox" name="likebook[]" value="ужасы">Ужасы<br>
-                <input type="checkbox" name="likebook[]" value="романы">Романы<br>
+                <input type="checkbox" name="checkbox[]" value="Классика">Классическая литература<br>
+                <input type="checkbox" name="checkbox[]" value="детективы">Детективы<br>
+                <input type="checkbox" name="checkbox[]" value="ужасы">Ужасы<br>
+                <input type="checkbox" name="checkbox[]" value="романы">Романы<br>
             </div>
         </fieldset>
         <fieldset>
