--- a/index.html
+++ b/index.html
@@ -43,17 +43,17 @@
         <fieldset>
             <legend>Предпочтения в литературе</legend>
             <div>
-                <input type="checkbox" name="checkbox[]" value="Классика">Классическая литература<br>
-                <input type="checkbox" name="checkbox[]" value="детективы">Детективы<br>
-                <input type="checkbox" name="checkbox[]" value="ужасы">Ужасы<br>
-                <input type="checkbox" name="checkbox[]" value="романы">Романы<br>
+                <label><input type="checkbox" name="checkbox[]" value="Классика">Классическая литература</label><br>
+                <label><input type="checkbox" name="checkbox[]" value="детективы">Детективы</label><br>
+                <label><input type="checkbox" name="checkbox[]" value="ужасы">Ужасы</label><br>
+                <label><input type="checkbox" name="checkbox[]" value="романы">Романы</label><br>
             </div>
         </fieldset>
         <fieldset>
             <legend>Согласны ли вы с правилами сайта?</legend>
             <div>
-                <input type="radio" name="radio" value="да" checked> Да <br>
-                <input type="radio" name="radio" value="Нет"> Нет <br>
+                <label><input type="radio" name="radio" value="да" checked> Да</label> <br>
+                <label><input type="radio" name="radio" value="Нет"> Нет</label> <br>
             </div>
         </fieldset>
         <fieldset>
