--- a/index.html
+++ b/index.html
@@ -1,69 +1,16 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Формы</title>
-    <style>
-        /* Стили для более удобного отображения элементов формы */
-        form {
-            width: 30%; /* Ширина формы 30% от ширины окна */
-        }
-
-        /* Все потомки первого уровня в форме или филдсете */
-        form>*,
-        form>fieldset>*
-        {
-            margin-bottom: 10px; /* Отступ снизу */
-            display: block; /* Чтобы каждый элемент с новой строки был */
-        }
-    </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Frames</title>
 </head>
-
 <body>
-
-<form action="request.php" method="POST" enctype="application/x-www-form-urlencoded">
-    <fieldset>
-        <fieldset>
-            <legend>Контактные данные</legend>
-            <label>ФИО <input type="text" name="fio" required placeholder="ФИО"></label><br>
-            <label>E-mail <input type="email" name="email" required placeholder="E-mail"></label><br>
-            <label>Пароль <input type="password" name="password" required placeholder="пароль"></label><br>
-            <label>Адрес сайта <input type="text" name="adress"  placeholder="http://"></label><br>
-        </fieldset>
-        <fieldset>
-            <legend>Дополнительные данные</legend>
-            <label for="male">Пол</label>
-            <select name="select[]" id="selection" size="1" id="male">
-                <option value="мужской" selected>Мужской</option>
-                <option value="женский">Женский</option>
-            </select><br>
-            <label for="about">Расскажите о себе</label><textarea name="textarea" id="about" cols="45" rows="3" wrap="soft" maxlength="450"placeholder="Расскажите нам о себе"></textarea>
-        </fieldset>
-        <fieldset>
-            <legend>Предпочтения в литературе</legend>
-            <div>
-                <label><input type="checkbox" name="checkbox[]" value="Классика">Классическая литература</label><br>
-                <label><input type="checkbox" name="checkbox[]" value="детективы">Детективы</label><br>
-                <label><input type="checkbox" name="checkbox[]" value="ужасы">Ужасы</label><br>
-                <label><input type="checkbox" name="checkbox[]" value="романы">Романы</label><br>
-            </div>
-        </fieldset>
-        <fieldset>
-            <legend>Согласны ли вы с правилами сайта?</legend>
-            <div>
-                <label><input type="radio" name="radio" value="да" checked> Да</label> <br>
-                <label><input type="radio" name="radio" value="Нет"> Нет</label> <br>
-            </div>
-        </fieldset>
-        <fieldset>
-            <input type="submit" value="Отправить форму">
-            <input type="reset" value="Очистить форму">
-        </fieldset>
-    </fieldset>
-      
-</form>
-
+    <ul>
+        <li><a href="frames.html">Старые фреймы</a></li>
+        <li><a href="iframe.html">Плавающий фрейм</a></li>
+        <li><a href="iframe1.html">Отправка формы во фрейм</a></li>
+    </ul>
 </body>
-
 </html>
