--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                     Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam
                     non fringilla.
             </p>
+            <a href="#">ссылка на полную статью</a>
             <footer>
                 
             </footer>
