--- a/модуль 3.4/index.html
+++ b/модуль 3.4/index.html
@@ -9,29 +9,29 @@
 </head>
 <body>
     <table border="1">
+        <tр>
+            <th>HEX</th><th>RGB</th><th>HSL</th><th>alpha</th>
+        </tr>
         <tr>
-            <td>HEX</td><td>RGB</td><td>HSL</td><td>alpha</td>
+            <td class="red1">1.21</td><td class="red2">1.21</td><td class="red3">1.21</td><td class="red4">1.98</td>
         </tr>
-        <tr class="one">
-            <td>red</td><td>5.25</td><td></td><td id="alpha"></td>
+        <tr>
+            <td class="two1">4.35</td><td class="two2">4.35</td><td class="two3">4.35</td><td class="two4">6.05</td>
         </tr>
-        <tr class="two">
-            <td>оранжевый</td><td>10.63</td><td></td><td id="alpha"></td>
+        <tr>
+            <td class="four1">8.00</td><td class="four2">8.00</td><td class="four3">8.00</td><td class="four4">8.13</td>
         </tr>
-        <tr class="four">
-            <td>желтый</td><td>19.56</td><td></td><td id="alpha"></td>
+        <tr>
+            <td class="five1">1.67</td><td class="five2">1.67</td><td class="five3">1.67</td><td class="five4">3.95</td>
         </tr>
-        <tr class="five">
-            <td>зеленый</td><td>4.09</td><td></td><td id="alpha"></td>
+        <tr>
+            <td class="six1">6.85</td><td class="six2">6.85</td><td class="six3">6.85</td><td class="six4">7.22</td>
         </tr>
-        <tr class="six">
-            <td>голубой</td><td>16.75</td><td></td><td id="alpha"></td>
+        <tr>
+            <td class="seven1">2.44</td><td class="seven2">2.44</td><td class="seven3">2.44</td><td class="seven4">6.38</td>
         </tr>
-        <tr class="seven">
-            <td>синий</td><td>2.44</td><td></td><td id="alpha"></td>
-        </tr>
-        <tr class="eight">
-            <td>фиолетовый</td><td>9.06</td><td></td><td id="alpha"></td>
+        <tr>
+            <td class="eight1">3.71</td><td class="eight2">3.71</td><td class="eight3">3.71</td><td class="eight4">5.61</td>
         </tr>
     </table>
 </body>
