--- a/модуль 3.4/index.html
+++ b/модуль 3.4/index.html
@@ -12,26 +12,47 @@
         <tр>
             <th>HEX</th><th>RGB</th><th>HSL</th><th>alpha</th>
         </tr>
-        <tr>
-            <td class="red1">1.21</td><td class="red2">1.21</td><td class="red3">1.21</td><td class="red4">1.98</td>
+        <tr class="red">
+            <td class="hex">1.21</td>
+            <td class="rgb">1.21</td>
+            <td class="hsl">1.21</td>
+            <td class="alpha">1.98</td>
         </tr>
-        <tr>
-            <td class="two1">4.35</td><td class="two2">4.35</td><td class="two3">4.35</td><td class="two4">6.05</td>
+        <tr class="orange">
+            <td class="hex">4.35</td>
+            <td class="rgb">4.35</td>
+            <td class="hsl">4.35</td>
+            <td class="alpha">6.05</td>
         </tr>
-        <tr>
-            <td class="four1">8.00</td><td class="four2">8.00</td><td class="four3">8.00</td><td class="four4">8.13</td>
+        <tr class="yellow">
+            <td class="hex">8.00</td>
+            <td class="rgb">8.00</td>
+            <td class="hsl">8.00</td>
+            <td class="alpha">8.13</td>
         </tr>
-        <tr>
-            <td class="five1">1.67</td><td class="five2">1.67</td><td class="five3">1.67</td><td class="five4">3.95</td>
+        <tr class="green">
+            <td class="hex">1.67</td>
+            <td class="rgb">1.67</td>
+            <td class="hsl">1.67</td>
+            <td class="alpha">3.95</td>
         </tr>
-        <tr>
-            <td class="six1">6.85</td><td class="six2">6.85</td><td class="six3">6.85</td><td class="six4">7.22</td>
+        <tr class="cyan"> 
+            <td class="hex">6.85</td>
+            <td class="rgb">6.85</td>
+            <td class="hsl">6.85</td>
+            <td class="alpha">7.22</td>
         </tr>
-        <tr>
-            <td class="seven1">2.44</td><td class="seven2">2.44</td><td class="seven3">2.44</td><td class="seven4">6.38</td>
+        <tr class="blue">
+            <td class="hex">2.44</td>
+            <td class="rgb">2.44</td>
+            <td class="hsl">2.44</td>
+            <td class="alpha">6.38</td>
         </tr>
-        <tr>
-            <td class="eight1">3.71</td><td class="eight2">3.71</td><td class="eight3">3.71</td><td class="eight4">5.61</td>
+        <tr class="violet">
+            <td class="hex">3.71</td>
+            <td class="rgb">3.71</td>
+            <td class="hsl">3.71</td>
+            <td class="alpha">5.61</td>
         </tr>
     </table>
 </body>
