--- a/модуль 3.4/index.html
+++ b/модуль 3.4/index.html
@@ -10,7 +10,10 @@
 <body>
     <table border="1">
         <tр>
-            <th>HEX</th><th>RGB</th><th>HSL</th><th>alpha</th>
+            <th>HEX</th>
+            <th>RGB</th>
+            <th>HSL</th>
+            <th>alpha</th>
         </tr>
         <tr class="red">
             <td class="hex">1.21</td>
