--- a/модуль 3.4/cssfonts.html
+++ b/модуль 3.4/cssfonts.html
@@ -17,20 +17,22 @@
 
     <p class="credits">Titles</p>
 
-    <p>London. Michaelmas term lately over, and the Lord Chancellor sitting in Lincoln's Inn Hall. Implacable November weather. As much mud in the streets as if the waters had but newly retired from the face of the earth, and it would not be wonderful to meet a Megalosaurus, forty feet long or so, waddling like an elephantine lizard up Holborn Hill.
+    <p class="firstletter">  London.<img src="img/star.png" alt="звездочка" class="overtext"> Michaelmas 
+        <img src="img/star.png" alt="звездочка" class="intext"> term lately over, 
+        <img src="img/star.png" alt="звездочка" class="undertext">and the Lord Chancellor sitting in Lincoln's Inn Hall. Implacable November weather. As much mud in the streets as if the waters had but newly retired from the face of the earth, and it would not be wonderful to meet a Megalosaurus, forty feet long or so, waddling like an elephantine lizard up Holborn Hill.
         Равным образом консультация с широким активом в значительной</p>
 
 
     <div class="panel">
         <h3>Zagolovok 3</h3>
-        <div class="normal">London. Michaelmas term lately over, and the Lord Chancellor sitting in Lincoln's Inn Hall. Implacable November weather. As much mud in the streets as if the waters had but newly retired from the face of the earth, and it would not be wonderful to meet a Megalosaurus, forty feet long or so, waddling like an elephantine lizard up Holborn Hill.
+        <div class="normal"> <span class="line">Londan.</span> London Michaelmas term lately over, and the Lord Chancellor sitting in Lincoln's Inn Hall. Implacable November weather. As much mud in the streets as if the waters had but newly retired from the face of the earth, and it would not be wonderful to meet a Megalosaurus, forty feet long or so, waddling like an elephantine lizard up Holborn Hill.
         </div>
     </div>
 
     <div class="panel bold">
         <h3>Zagolovok 3</h3>
         <div>
-            London. Michaelmas term lately over, and the Lord Chancellor sitting in Lincoln's Inn Hall. Implacable November weather. As much mud in the streets as if the waters had but newly retired from the face of the earth, and it would not be wonderful to meet a Megalosaurus, forty feet long or so, waddling like an elephantine lizard up Holborn Hill.
+            London. <span class="underline">Michaelmas term lately over</span>, and the Lord Chancellor sitting in Lincoln's Inn Hall. Implacable November weather. As much mud in the streets as if the waters had but newly retired from the face of the earth, and it would not be wonderful to meet a Megalosaurus, forty feet long or so, waddling like an elephantine lizard up Holborn Hill.
         </div>
     </div>
 
