--- a/3.9/index.html
+++ b/3.9/index.html
@@ -11,19 +11,19 @@
     <div class="container">
         <div class="links">
             <div class="url">
-                <a href=""><img src="images/android.png" alt="android"></a>
+                <a href="https://ru.wikipedia.org/wiki/Android"><img src="images/android.png" alt="android"></a>
                 Google
             </div>
             <div class="url">
-                <a href=""><img src="images/apple.png" alt="android"></a>
+                <a href="https://ru.wikipedia.org/wiki/IOS"><img src="images/apple.png" alt="ios"></a>
                 Понтохрень
             </div>
             <div class="url">
-                <a href=""><img src="images/linux.png" alt="android"></a>
+                <a href="https://ru.wikipedia.org/wiki/Linux"><img src="images/linux.png" alt="linux"></a>
                 Линукс
             </div>
             <div class="url">
-                <a href=""><img src="images/win.png" alt="android"></a>
+                <a href="https://ru.wikipedia.org/wiki/Windows"><img src="images/win.png" alt="windows"></a>
                 Окно 10
             </div>
         </div>
