--- a/3.9/index.html
+++ b/3.9/index.html
@@ -11,20 +11,16 @@
     <div class="container">
         <div class="links">
             <div class="url">
-                <a href="https://ru.wikipedia.org/wiki/Android"><img src="images/android.png" alt="android"></a>
-                Google
+                <a href="https://ru.wikipedia.org/wiki/Android"><img src="images/android.png" alt="android">Google</a>
             </div>
             <div class="url">
-                <a href="https://ru.wikipedia.org/wiki/IOS"><img src="images/apple.png" alt="ios"></a>
-                Понтохрень
+                <a href="https://ru.wikipedia.org/wiki/IOS"><img src="images/apple.png" alt="ios">Понтохрень</a>
             </div>
             <div class="url">
-                <a href="https://ru.wikipedia.org/wiki/Linux"><img src="images/linux.png" alt="linux"></a>
-                Линукс
+                <a href="https://ru.wikipedia.org/wiki/Linux"><img src="images/linux.png" alt="linux">Линукс</a>
             </div>
             <div class="url">
-                <a href="https://ru.wikipedia.org/wiki/Windows"><img src="images/win.png" alt="windows"></a>
-                Окно 10
+                <a href="https://ru.wikipedia.org/wiki/Windows"><img src="images/win.png" alt="windows">Шиндовс</a>
             </div>
         </div>
     </div>
