--- a/3.11/block.html
+++ b/3.11/block.html
@@ -10,13 +10,13 @@
 </head>
 
 <body>
-
-    <header>Header
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia maxime ut quis officia numquam tempore possimus ullam tempora dolore assumenda blanditiis nesciunt molestias similique natus, voluptatem exercitationem praesentium fugit nobis!
-    </header>
-    <main>Main</main>
-    <footer>Footer</footer>
-
+    <div class="container">
+        <header>Header
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia maxime ut quis officia numquam tempore possimus ullam tempora dolore assumenda blanditiis nesciunt molestias similique natus, voluptatem exercitationem praesentium fugit nobis!
+        </header>
+        <main>Maing</main>
+        <footer>Footer</footer>
+    </div>
 
 </body>
 
