--- a/3.12/index.html
+++ b/3.12/index.html
@@ -14,10 +14,10 @@
         </header>
         <main>
             <div class="menu-nav">
-                <ul class="menu-nav-ul">
-                    <li>Каталог</li>
-                    <li>Доставка</li>
-                    <li>Контакты</li>
+                <ul>
+                    <li class="menu-nav-ul">Каталог</li>
+                    <li class="menu-nav-ul">Доставка</li>
+                    <li class="menu-nav-ul">Контакты</li>
                 </ul>
             </div>
             <div class="menu-left">
