--- a/3.12/index.html
+++ b/3.12/index.html
@@ -10,25 +10,21 @@
 <body>
     <div class="container">
         <header>
-            Сайт
+            <span>Сайт</span>
+            <ul class="menu-nav">
+                <li>Каталог</li>
+                <li>Доставка</li>
+                <li>Контакты</li>
+            </ul>
         </header>
         <main>
-            <div class="menu-nav">
-                <ul>
-                    <li class="menu-nav-ul">Каталог</li>
-                    <li class="menu-nav-ul">Доставка</li>
-                    <li class="menu-nav-ul">Контакты</li>
-                </ul>
-            </div>
-            <div class="menu-left">
-                <ol class="menu-left-ol">
-                    <li class="class"><span>КАТАЛОГ</span></li>
-                    <li class="class"><span>ДОСТАВКА</span></li>
-                    <li class="class"><span>КОНТАКТЫ</span></li>
-                    <li class="class"><span>КАРТА</span></li>
-                    <li class="class"><span>ОПЛАТА</span></li>
-                </ol>
-            </div>
+            <ol class="menu-left">
+                <li class="class"><span>КАТАЛОГ</span></li>
+                <li class="class"><span>ДОСТАВКА</span></li>
+                <li class="class"><span>КОНТАКТЫ</span></li>
+                <li class="class"><span>КАРТА</span></li>
+                <li class="class"><span>ОПЛАТА</span></li>                
+            </ol>
         </main>
         <footer>
             Контакты
