--- a/3.12/index.html
+++ b/3.12/index.html
@@ -13,8 +13,8 @@
             <span>Сайт</span>
             <ul class="menu-nav">
                 <li>Каталог</li>
-                <li>Доставка</li>
-                <li>Контакты</li>
+                <li class="line">Доставка</li>
+                <li class="line">Контакты</li>
             </ul>
         </header>
         <main>
