--- a/3.12/index.html
+++ b/3.12/index.html
@@ -13,17 +13,17 @@
             <span>Сайт</span>
             <ul class="menu-nav">
                 <li>Каталог</li>
-                <li class="line">Доставка</li>
-                <li class="line">Контакты</li>
+                <li>Доставка</li>
+                <li>Контакты</li>
             </ul>
         </header>
         <main>
             <ol class="menu-left">
-                <li class="class"><span>КАТАЛОГ</span></li>
-                <li class="class"><span>ДОСТАВКА</span></li>
-                <li class="class"><span>КОНТАКТЫ</span></li>
-                <li class="class"><span>КАРТА</span></li>
-                <li class="class"><span>ОПЛАТА</span></li>                
+                <li><span>КАТАЛОГ</span></li>
+                <li><span>ДОСТАВКА</span></li>
+                <li><span>КОНТАКТЫ</span></li>
+                <li><span>КАРТА</span></li>
+                <li><span>ОПЛАТА</span></li>                
             </ol>
         </main>
         <footer>
