--- a/модудь 3.13/index.html
+++ b/модудь 3.13/index.html
@@ -102,10 +102,10 @@
             <div>3 IP Adress</div>
         </div>
         <div class="divtr">
-            <div><span class="buttonorder">ORDER NOW</span></div>
-            <div><span class="buttonorder">ORDER NOW</span></div>
-            <div><span class="buttonorder">ORDER NOW</span></div>
-            <div><span class="buttonorder">ORDER NOW</span></div>
+            <div><span>ORDER NOW</span></div>
+            <div><span>ORDER NOW</span></div>
+            <div><span>ORDER NOW</span></div>
+            <div><span>ORDER NOW</span></div>
         </div>
     </div>
 </body>
