--- a/модудь 3.13/index.html
+++ b/модудь 3.13/index.html
@@ -108,5 +108,47 @@
             <div><span>ORDER NOW</span></div>
         </div>
     </div>
+    <div class="table" >
+        <div>
+            <div>VPS A</div>
+            <div><span>$25</span> / mo</div>
+            <div>10 GB Storage</div>
+            <div>1 TB Data Transfer</div>
+            <div>256 MB Memory</div>
+            <div>WHM</div>
+            <div>1 IP Adress</div>
+            <div><a href="#">ORDER NOW</a></div>
+        </div>
+        <div>
+            <div>VPS B</div>
+            <div><span>$35</span> / mo</div>
+            <div>50 GB Storage</div>
+            <div>3 TB Dada Transfer</div>
+            <div>384 MB Memory</div>
+            <div>CPanel, WHM</div>
+            <div>1 IP Adress</div>
+            <div><a href="#">ORDER NOW</a></div>
+        </div>
+        <div>
+            <div>VPS C</div>
+            <div><span>$55</span> / mo</div>
+            <div>100 GB Storage</div>
+            <div>10 TB Data Transfer</div>
+            <div>512 MB Memory</div>
+            <div>CPanel, WHM</div>
+            <div>2 IP Adress</div>
+            <div><a href="#">ORDER NOW</a></div>
+        </div>
+        <div>
+            <div>VPS D</div>
+            <div><span>$100</span> / mo</div>
+            <div>500GB Storage</div>
+            <div>50 TB Data Transfer</div>
+            <div>1024 MB Memory</div>
+            <div>CPanel, WHM</div>
+            <div>3 IP Adress</div>
+            <div><a href="#">ORDER NOW</a></div>
+        </div>
+    </div>
 </body>
 </html>
