--- a/модудь 3.13/index.html
+++ b/модудь 3.13/index.html
@@ -108,6 +108,7 @@
             <div><span>ORDER NOW</span></div>
         </div>
     </div>
+    <fieldset>
     <div class="table" >
         <div>
             <div>VPS A</div>
@@ -129,6 +130,7 @@
             <div>1 IP Adress</div>
             <div><a href="#">ORDER NOW</a></div>
         </div>
+        
         <div>
             <div>VPS C</div>
             <div><span>$55</span> / mo</div>
@@ -150,5 +152,6 @@
             <div><a href="#">ORDER NOW</a></div>
         </div>
     </div>
+    </fieldset>
 </body>
 </html>
