--- a/Новая папка/forms.html
+++ b/Новая папка/forms.html
@@ -11,11 +11,12 @@
 
 <body>
 
-    <div class="checkbox-slider">
-        <input type="checkbox" name="check" id="checkbox">
-        <label for="checkbox"></label>
-    </div>
-
+    <fieldset>
+        <legend>Согласны ли вы с правилами сайта?</legend>
+        <div><input type="radio" name="radio" id="yes" required checked> <label for="yes">Да, конечно</label> </div> 
+        <div><input type="radio" name="radio" id="no"> <label for="no">Нет</label></div>
+    </fieldset>
+    
 
 </body>
 
