--- a/3.11/block.html
+++ b/3.11/block.html
@@ -10,13 +10,13 @@
 </head>
 
 <body>
-    <div class="container">
-        <header>Header
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia maxime ut quis officia numquam tempore possimus ullam tempora dolore assumenda blanditiis nesciunt molestias similique natus, voluptatem exercitationem praesentium fugit nobis!
-        </header>
-        <main>Maing</main>
-        <footer>Footer</footer>
-    </div>
+<div class="container">
+    <header>Header
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia maxime ut quis officia numquam tempore possimus ullam tempora dolore assumenda blanditiis nesciunt molestias similique natus, voluptatem exercitationem praesentium fugit nobis!
+    </header>
+    <main>Main Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis vero, iure eveniet nam unde ipsa adipisci nihil molestias veritatis dicta cumque soluta recusandae ipsam quia sapiente dignissimos voluptatem? Neque, harum! Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium quaerat adipisci, fuga repellendus unde consectetur vel enim at eos eaque libero sed tempora numquam voluptas assumenda quas, quo reprehenderit aspernatur. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium illo excepturi voluptatem ducimus architecto iure beatae veritatis, praesentium nam porro asperiores consequatur dolore modi dolores omnis. Molestiae commodi libero accusamus. Не вызывает сомнений, что консультация с широким активом требует анализа позиции, занимаемых участниками в отношении поставленных задач.Не следует, однако, забывать, что консультация с широким активом позволяет выполнять важные задания по разработке модели развития. Для современного мира сложившаяся структура организации способствует повышению качества экономической целесообразности принимаемых изменений. Таким образом сложившаяся структура организации способствует повышению качества форм воздействия. Разнообразный и богатый опыт реализация намеченных плановых заданий способствует подготовке и реализации системы обучения кадров, соответствующей насущным потребностям. Для современного мира рамки и место обучения кадров требует анализа форм воздействия. Идейные соображения высшего порядка, а также постоянное информационно-пропогандистское обеспечение нашей деятельности требует анализа новых принципов формирования материально-технической и кадровой базы. Значимость этих проблем настолько очевидна, что социально-экономическое развитие обеспечивает широкому кругу специалистов модели развития. Таким образом консультация с широким активом требует от нас анализа дальнейших направлений развития. С другой стороны управление и развитие структуры требует анализа форм воздействия. Таким образом повышение уровня гражданского сознания позволяет выполнять важные задания по разработке поставленных обществом и правительством задач.Равным образом повышение уровня гражданского сознания создаёт предпосылки качественно новых шагов для существующий финансовых и административных условий. Задача организации, в особенности же постоянный количественный рост и сфера нашей активности в значительной степени обуславливает создание существующий финансовых и административных условий. Разнообразный и богатый опыт управление и развитие структуры требует определения и уточнения систему массового участия.</main>
+    <footer>Footer</footer>
+</div>
 
 
 </body>
