--- a/модудь 3.13/index.html
+++ b/модудь 3.13/index.html
@@ -16,10 +16,10 @@
             <th>Reseller Host</th>
         </tr>
         <tr>
-            <td><span class="fonthi">$2</span> / mo</td>
-            <td><span class="fonthi">$4</span> / mo</td>
-            <td><span class="fonthi">$6</span> / mo</td>
-            <td><span class="fonthi">$10</span> / mo</td>
+            <td><span>$2</span> / mo</td>
+            <td><span>$4</span> / mo</td>
+            <td><span>$6</span> / mo</td>
+            <td><span>$10</span> / mo</td>
         </tr>
         <tr>
             <td>2 GB Storage</td>
@@ -108,7 +108,7 @@
             <div><span>ORDER NOW</span></div>
         </div>
     </div>
-    <fieldset>
+
     <div class="table" >
         <div>
             <div>VPS A</div>
@@ -152,6 +152,6 @@
             <div><a href="#">ORDER NOW</a></div>
         </div>
     </div>
-    </fieldset>
+    
 </body>
 </html>
